--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Terms of Service</title>
-  <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;max-width:820px;margin:40px auto;padding:0 16px;line-height:1.6}
-    a{word-break:break-all}
-  </style>
+    <meta charset="UTF-8">
+    <title>Norrell Global - Legal</title>
 </head>
 <body>
-  <h1>Terms of Service</h1>
-  <p>Read our full Terms of Service here:</p>
-  <p><a href="https://www.termsfeed.com/live/6cf0769d-791e-4fee-aec3-8a029a18f82d" rel="nofollow">https://www.termsfeed.com/live/6cf0769d-791e-4fee-aec3-8a029a18f82d</a></p>
-  <p>Last updated: <span id="d"></span></p>
-  <script>document.getElementById('d').textContent=new Date().toISOString().slice(0,10)</script>
+    <h1>Norrell Global Legal Policies</h1>
+    <ul>
+        <li><a href="https://www.termsfeed.com/live/6cf0769d-791e-4fee-aec3-8a029a18f82d" target="_blank">Terms of Service</a></li>
+        <li><a href="https://www.termsfeed.com/live/b397512a-8761-4878-8a09-af60ea2efd07" target="_blank">Privacy Policy</a></li>
+    </ul>
 </body>
 </html>
